--- a/config.example.json
+++ b/config.example.json
@@ -1,7 +1,7 @@
 {
   "agents": {
     "defaults": {
-      "workspace": "~/.nanobot/workspace",
+      "workspace": "~/.icron/workspace",
       "model": "anthropic/claude-opus-4-5",
       "maxTokens": 8192,
       "temperature": 0.7,
