Add conversation context trimming with token limits
- Create icron/utils/tokens.py for token counting
- Update Session.get_history() with max_tokens parameter
- Add maxContextTokens to ExecToolConfig (default 100k)
- Pass max_tokens from config to AgentLoop
- Add Max Context Tokens input in web UI
- Update config.example.json with new setting
- Add node_modules to .gitignore

Prevents token limit crashes on long conversations while
preserving recent context. Memory tools are NOT affected.

--- a/config.example.json
+++ b/config.example.json
@@ -93,7 +93,8 @@
     },
     "exec": {
       "timeout": 60,
-      "restrictToWorkspace": false
+      "restrictToWorkspace": false,
+      "maxContextTokens": 100000
     },
     "mcp": {
       "enabled": false,
