--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ classifiers = [
 dependencies = [
     "typer>=0.9.0",
     "litellm>=1.0.0",
+    "anthropic>=0.21.0",
+    "google-genai>=0.1.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
     "websockets>=12.0",
@@ -30,6 +32,7 @@ dependencies = [
     "croniter>=2.0.0",
     "python-telegram-bot>=21.0",
     "slack-sdk>=3.26.0",
+    "discord.py>=2.3.0",
     "playwright>=1.40.0",
     "sqlite-vec>=0.1.1",
 ]
